--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center primary color">Learn here about coding!!!</h1>
+    <h1 class="tc ch">Learn here about coding!!!</h1>
+    <div class="row">
+<div class="col-md-3">
+<p>java</p>
+<p>java</p>
+<p>java</p>
+<p>java</p>
+</div>
+    </div>
 </body>
 </html>
