--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" >
-    <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
 </head>
 <body>
-<div class="container">
-<div class="row">
-    <div class="col">col-1</div>
-    <div class="col">col-2</div>
-    <div class="col">col-3</div>
-</div>
-<div class="row">
-</div>
-<div class="row">
-</div>
-</div>
+<div class="container-fluid">
+    <h1 class="text-center">Hello</h1>
+ </div>
 </body>
 </html>
