--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <h1 class="text-center">Hello</h1>
+    <h1 class="text-center">Learning page</h1>
+ </div>
+ <div class="container">
+  <p>Learn these types of Languages here</p>
+  <hr>
+  <p>hello</p>
  </div>
 </body>
 </html>
