--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1 class="text-center">Learning page</h1>
  </div>
  <div class="container">
-  <p>Learn these types of Languages here</p>
+  <p>Learn these types of Languages here:</p>
   <hr>
-  <p>hello</p>
+  <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
  </div>
 </body>
 </html>
