--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-<div class="container-fluid">
+<header class="container-fluid">
     <h1 class="text-center">Learning page</h1>
- </div>
- <div class="container">
+</header>
+ <nav class="container">
   <p>Learn these types of Languages here:</p>
   <hr>
   <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
- </div>
+ </nav>
+  <h2></h2>
 </body>
 </html>
