--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <hr>
   <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
  </nav>
-  <h2></h2>
+  <h2 class="fz text-center">Java</h2>
 </body>
 </html>
