--- a/index.html
+++ b/index.html
@@ -18,5 +18,35 @@
   <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
  </nav>
   <h2 class="fz text-center">Java</h2>
+  <div class="container">
+      <ul>
+ <p class="ff">Java Script uses:</p>
+ <li><p>eractive behavior to web pages. JavaScript allows users to interact with web pages. ...</p></li> 
+  <li><p>Creating web and mobile apps. Developers can use various JavaScript frameworks for developing and building web and mobile apps. ...</p></li>
+ <li><p>Building web servers and developing server applications. ...</p></li> 
+ <li><p>Adding intGame development.</p></li>
+</ul>
+<ul>
+<p class="ff">JavaScript advantages:</p>
+<li><p>Speed. Since JavaScript is an 'interpreted' language, it reduces the time required by other programming languages like Java for compilation. ...</p></li>
+<li><p>Simplicity. JavaScript is easy to understand and learn. ...</p></li>
+<li><p>Popularity. ...
+    Interoperability. ...
+    Server Load. ...
+    Rich Interfaces. ...
+    Extended Functionality. ...
+    Versatility.</p></li>
+</ul>
+<ul>
+<p class="ff">JavaScript disadvantages:</p>
+<li><p>Client-side Security. Since the JavaScript code is viewable to the user, others may use it for malicious purposes. ...</p></li>
+<li><p>Browser Support. The browser interprets JavaScript differently in different browsers. ...</p></li>
+<li><P>Lack of Debugging Facility. ...
+    Single Inheritance. ...
+    Sluggish Bitwise Function. ...
+    Rendering Stopped.</P></li>
+</ul>
+
+</div>
 </body>
 </html>
