--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="container-fluid">
     <h1 class="text-center">Learning page</h1>
 </header>
- <nav class="container">
+ <nav class="container pp">
   <p>Learn these types of Languages here:</p>
   <hr>
   <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
