--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Document</title>
 </head>
 <body>
@@ -46,7 +46,8 @@
     Sluggish Bitwise Function. ...
     Rendering Stopped.</P></li>
 </ul>
-
 </div>
+<p class="text-center ff">Why to use this webiste</p>
+<img class="image-responsive cc" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
 </body>
 </html>
