--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1 class="text-center">Learning page</h1>
 </header>
  <nav class="container pp">
-  <p>Learn these types of Languages here:</p>
+  <p>Uses,advantages and disadvantages of these types of Languages here:</p>
   <hr>
   <p><a href="Java">Java</a>,<a href="html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
  </nav>
-  <h2 class="fz text-center">Java</h2>
+  <h2 class="fz text-center">JavaScript</h2>
   <div class="container">
       <ul>
  <p class="ff">Java Script uses:</p>
@@ -48,6 +48,8 @@
 </ul>
 </div>
 <p class="text-center ff">Why to use this webiste</p>
-<img class="image-responsive cc" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
+<div class="d-flex">
+<img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
+</div>
 </body>
 </html>
