--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
     Rendering Stopped.</P></li>
 </ul>
 </div>
-<p class="text-center ff">Why to use this webiste</p>
 <div class="d-flex">
 <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
 </div>
+<div class="container">
+    <ul>
+        <p class="ff">Why to use this webiste</p>
+        <li><p>fast updates. ...</p></li>
+        <li><p>best advantages. ...</p></li>
+        <li><p>best uses. ...</p></li>
+        <li><p>best disadvantages. ...</p></li>
+    </ul>
+</div>
+<p class="ff text-center">Credits!!!</p>
 </body>
 </html>
