--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
     Rendering Stopped.</P></li>
 </ul>
 </div>
+<p class="ff text-center">Information about webpage.</p>
 <div class="d-flex">
 <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
 </div>
-<div class="container">
+<div class="container-2 m-auto">
     <ul>
         <p class="ff">Why to use this webiste</p>
         <li><p>fast updates. ...</p></li>
-        <li><p>best advantages. ...</p></li>
-        <li><p>best uses. ...</p></li>
-        <li><p>best disadvantages. ...</p></li>
+        <li><p>tells the best advantages of languages. ...</p></li>
+        <li><p>tells the best uses of languages. ...</p></li>
+        <li><p>tells the disadvantages of languages. ...</p></li>
     </ul>
 </div>
 <p class="ff text-center">Credits!!!</p>
