--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-<header class="container-fluid">
+<header class="container-fluid bo">
     <h1 class="text-center">Learning page</h1>
 </header>
  <nav class="container pp">
@@ -61,5 +61,8 @@
     </ul>
 </div>
 <p class="ff text-center">Credits!!!</p>
+<footer>
+
+</footer>
 </body>
 </html>
