--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </ul>
 </div>
 <p class="ff text-center">Credits!!!</p>
-<footer class="container-fluid cf">
+<footer class="container-fluid cf pp bb">
     <P id="p1">check out!!!</P>
     <p id="p2">Accounts of Mr Zero Pg</p>
+    <hr>
     <a href="https://www.facebook.com/freefirepkesports/">
         <img id="f-image" src="https://th.bing.com/th/id/OIP.3ZzuiBFQSpjv3BDNTGda8gHaHa?pid=ImgDet&rs=1"></a>
        
