--- a/2index.html
+++ b/2index.html
@@ -17,7 +17,7 @@
   <hr>
   <p><a href="index.html">Java</a>,<a href="2index.html">html</a>,<a href="html">css</a>,<a href="html">bootstrap</a>,<a href="html">Python</a>,<a href="html">c-language</a><a href=""> and ruby</a></p>
  </nav>
-  <h2 class="fz text-center">JavaScript</h2>
+  <h2 class="fz text-center">Html</h2>
   <div class="container">
       <ul>
  <p class="ff">Java Script uses:</p>
