--- a/3index.html
+++ b/3index.html
@@ -15,7 +15,7 @@
  <nav class="container pp">
   <p>Uses,advantages and disadvantages of these types of Languages here:</p>
   <hr>
-  <p class="text-center"><a href="index.html">Java</a>--<a href="2index.html">html</a>--<a href="html">css</a>--<a href="html">bootstrap</a>--<a href="html">Python</a>--<a href="html">c-language</a>--<a href="">ruby</a></p>
+  <p class="text-center"><a href="index.html">Java</a>--<a href="2index.html">html</a>--<a href="3index.html">css</a><a href="4index.html">bootstrap</a>--<a href="#">Python</a>--<a href="#">c-language</a>--<a href="#">ruby</a></p>
  </nav>
   <h2 class="fz text-center">css</h2>
   <div class="container">
