--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 </div>
 <p class="ff text-center">Information about webpage.</p>
 <div class="d-flex">
-<img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3ybcXblfC12w3A2OD0m_6fzkwxsQWNshAgg&usqp=CAU">
-</div>
-<div class="container-2 m-auto">
+    <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYZc7GJLohPlZ6nYv1YCPsZi5pqJCGPuSEA&usqp=CAU">
+        </div>
+    </div>
+<div class="container m-auto">
     <ul>
         <p class="ff">Why to use this webiste</p>
         <li><p>fast updates. ...</p></li>
