--- a/4index.html
+++ b/4index.html
@@ -51,7 +51,7 @@
 <div class="d-flex">
     <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYZc7GJLohPlZ6nYv1YCPsZi5pqJCGPuSEA&usqp=CAU">
 </div>
-<div class="container-2 m-auto">
+<div class="container m-auto">
     <ul>
         <p class="ff">Why to use this webiste</p>
         <li><p>fast updates. ...</p></li>
