--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
 </ul>
 </div>
 <p class="ff text-center">Information about webpage.</p>
-<div class="d-flex">
+<div class="container">
+ <div class="row">
+ <div class="col-xl-12">
     <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYZc7GJLohPlZ6nYv1YCPsZi5pqJCGPuSEA&usqp=CAU">
         </div>
+    </div>   
+ </div>
 <div class="container m-auto">
     <ul>
         <p class="ff">Why to use this webiste</p>
