--- a/index.html
+++ b/index.html
@@ -48,14 +48,10 @@
 </ul>
 </div>
 <p class="ff text-center">Information about webpage.</p>
-<div class="container">
- <div class="row">
- <div class="col-xl-12">
+<div class="d-flex">
     <img class="image-responsive cc m-auto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYZc7GJLohPlZ6nYv1YCPsZi5pqJCGPuSEA&usqp=CAU">
-        </div>
-    </div>   
- </div>
-<div class="container m-auto">
+</div>
+    <div class="container m-auto">
     <ul>
         <p class="ff">Why to use this webiste</p>
         <li><p>fast updates. ...</p></li>
